--- a/modulo-4/modules/package.json
+++ b/modulo-4/modules/package.json
@@ -5,11 +5,14 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "npx nodemon --ignore databse.json --exec node --experimental-json-modules src/index.js",
+    "dev": "npx nodemon --ignore databse.json --exec node --experimental-json-modules --experimental-top-level-await src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "14.3"
+  },
   "dependencies": {
     "chalk": "^4.1.0",
     "chalk-table": "^1.0.2",
