--- a/modulo-4/modules/package.json
+++ b/modulo-4/modules/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "dev": "npx nodemon --ignore databse.json --exec node --experimental-json-modules --experimental-top-level-await src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx mocha -w --parallel test/*.test.js",
+    "test:cov": "npx nyc npx mocha -r reify --parallel test/*.test.js"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +20,12 @@
     "draftlog": "^1.0.13"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "chai": "^4.3.4",
+    "chai-exclude": "^2.0.3",
+    "mocha": "^8.3.2",
+    "nodemon": "^2.0.7",
+    "nyc": "^15.1.0",
+    "reify": "^0.20.12",
+    "sinon": "^9.2.4"
   }
 }
