--- a/modulo01/aula04-coverage-2e2/package.json
+++ b/modulo01/aula04-coverage-2e2/package.json
@@ -6,10 +6,12 @@
   "dependencies": {},
   "devDependencies": {
     "mocha": "^8.4.0",
+    "nyc": "^15.1.0",
     "supertest": "^6.2.3"
   },
   "scripts": {
-    "test": "npx mocha -w *.test.js"
+    "test": "npx mocha -w --parallel *.test.js",
+    "test:cov": "npx nyc npx mocha --parallel *.test.js"
   },
   "keywords": [],
   "author": "",
