--- a/modulo01/aula05-tdd-project-pt02/package.json
+++ b/modulo01/aula05-tdd-project-pt02/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
+    "chai": "^4.3.6",
     "faker": "^5.1.0",
     "mocha": "^8.4.0",
     "nyc": "^15.1.0",
